--- a/app/src/main/res/layout/activity_add_rice_timer.xml
+++ b/app/src/main/res/layout/activity_add_rice_timer.xml
@@ -6,7 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".AddRiceTimer">
+    tools:context=".AddRiceTimer"
+    android:background="#ff000000">
 
 
     <Button
@@ -15,32 +16,18 @@
         android:text="@string/timer_button"
         android:onClick="startRice"
         android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:background="#fffe9e3a"
-        android:textSize="30sp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/jasmine_button"
-        android:onClick="startJasmine"
-        android:id="@+id/jasmine_button"
+        android:background="#ff333333"
+        android:textSize="50sp"
         android:layout_centerVertical="true"
-        android:layout_alignEnd="@+id/button"
-        android:background="#ff97ff77"
-        android:textSize="30sp" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffffff" />
 
-    <Button
+    <ImageSwitcher
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/basmati_button"
-        android:onClick="startBasmati"
-        android:id="@+id/basmati_button"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/jasmine_button"
-        android:layout_marginBottom="48dp"
-        android:background="#ff8ff3ff"
-        android:textSize="30sp" />
+        android:id="@+id/imageSwitcher"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="150dp" />
 
 </RelativeLayout>
