--- a/app/src/main/res/layout/activity_add_rice_timer.xml
+++ b/app/src/main/res/layout/activity_add_rice_timer.xml
@@ -9,6 +9,13 @@
     tools:context=".AddRiceTimer"
     android:background="#ff000000">
 
+    <ImageSwitcher
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageSwitcher"
+        android:layout_alignBottom="@+id/button"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="150dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -18,16 +25,70 @@
         android:id="@+id/button"
         android:background="#ff333333"
         android:textSize="50sp"
-        android:layout_centerVertical="true"
+        android:textColor="#ffffffff"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textColor="#ffffffff" />
+        android:layout_marginTop="35dp" />
 
-    <ImageSwitcher
+    <TextView
+        android:text="Perfect rice:\n0: Put rice on high.\n1: Reduce to low and stir. \n2: Remove from heat and place cloth under lid.\n3: Eat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageSwitcher"
-        android:layout_alignBottom="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="150dp" />
+        android:layout_below="@+id/imageSwitcher"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView"
+        android:textColor="@android:color/white" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/metronome"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/intervalMinutesSeekBar"
+            android:progress="3"
+            android:max="100"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/intervalTextView"
+            android:textColor="@android:color/white"
+            android:text="Every 3 minutes"
+            android:progress="3"
+            android:max="15"/><!-- maximum seekbar progress -->
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="3"
+            android:id="@+id/numberOfTimesSeekBar" />
+        <TextView
+            android:text="6 times"
+            android:layout_width="match_parent"
+            android:id="@+id/numberOfTimesTextView"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:progress="3"
+            android:max="100"/> <!-- maximum seekbar progress -->
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/metronome_button"
+        android:onClick="metronome"
+        android:id="@+id/metronome"
+        android:background="#ff333333"
+        android:textSize="30sp"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
