--- a/app/src/main/res/menu/add_rice_timer.xml
+++ b/app/src/main/res/menu/add_rice_timer.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".AddRiceTimer" >
+    tools:context="com.jlokimlin.rice_timer.rice_timer.AddRiceTimer" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
