--- a/app/src/main/res/layout/activity_add_rice_timer.xml
+++ b/app/src/main/res/layout/activity_add_rice_timer.xml
@@ -23,7 +23,7 @@
         android:text="@string/timer_button"
         android:onClick="startRice"
         android:id="@+id/button"
-        android:background="#ff0000"
+        android:background="#ff333333"
         android:textSize="50sp"
         android:textColor="#ffffffff"
         android:layout_alignParentTop="true"
@@ -34,10 +34,61 @@
         android:text="Perfect rice:\n0: Put rice on high.\n1: Reduce to low and stir. \n2: Remove from heat and place cloth under lid.\n3: Eat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textColor="@android:color/white"
         android:layout_below="@+id/imageSwitcher"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp" />
+        android:id="@+id/textView"
+        android:textColor="@android:color/white" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/metronome"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp">
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/intervalMinutesSeekBar"
+            android:progress="3"
+            android:max="100"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/intervalTextView"
+            android:textColor="@android:color/white"
+            android:text="Every 3 minutes"
+            android:progress="3"
+            android:max="15"/><!-- maximum seekbar progress -->
+
+        <SeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="100"
+            android:progress="3"
+            android:id="@+id/numberOfTimesSeekBar" />
+        <TextView
+            android:text="6 times"
+            android:layout_width="match_parent"
+            android:id="@+id/numberOfTimesTextView"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:progress="3"
+            android:max="100"/> <!-- maximum seekbar progress -->
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/metronome_button"
+        android:onClick="metronome"
+        android:id="@+id/metronome"
+        android:background="#ff333333"
+        android:textSize="30sp"
+        android:textColor="#ffffffff"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
