--- a/app/src/main/res/layout/activity_add_rice_timer.xml
+++ b/app/src/main/res/layout/activity_add_rice_timer.xml
@@ -26,26 +26,26 @@
         android:background="#ff333333"
         android:textSize="50sp"
         android:textColor="#ffffffff"
+        android:layout_marginTop="28dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:text="Perfect rice:\n0: Put rice on high.\n1: Reduce to low and stir. \n2: Remove from heat and place cloth under lid.\n3: Eat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageSwitcher"
-        android:layout_centerHorizontal="true"
         android:id="@+id/textView"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/imageSwitcher"
+        android:layout_alignStart="@+id/button" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
         android:layout_below="@+id/metronome"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp">
+        android:layout_alignParentStart="true">
 
         <SeekBar
             android:layout_width="match_parent"
@@ -89,6 +89,6 @@
         android:textSize="30sp"
         android:textColor="#ffffffff"
         android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true" />
-
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="17dp" />
 </RelativeLayout>
