--- a/app/src/main/res/drawable/ic_noun_33800_cc.xml
+++ b/app/src/main/res/drawable/ic_noun_33800_cc.xml
@@ -1,5 +1,8 @@
 <vector android:height="24dp" android:viewportHeight="62.5"
     android:viewportWidth="50.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#cccccc" android:pathData="M-30.99,-22.78h144.6v134.27h-144.6z"/>
+    <path android:fillColor="#cccccc" android:pathData="M58.26,13.51h14.57v5.3h-14.57z"/>
+    <path android:fillColor="#cccccc" android:pathData="M48.2,24.63h46.08v2.65h-46.08z"/>
     <path android:fillColor="#000000" android:pathData="M44.1,11.16c0.78,-0.7 0.7,-1.41 -0.15,-2.12c-4.35,0.82 -31.49,11.6 -32.08,13.68C22.58,18.86 33.36,15.03 44.1,11.16z"/>
     <path android:fillColor="#000000" android:pathData="M36.52,2.61c-0.48,-3.27 -4.05,0.52 -6.62,2.08c-2.64,2.04 -4.83,3.53 -7.55,5.58c-2.57,1.97 -13.31,9.48 -13.91,11.78L36.52,2.61z"/>
     <path android:fillColor="#000000" android:pathData="M18.67,26.93c2.75,-1.08 2.38,-4.87 7.55,-2.94c0.48,0.78 0,1.45 -0.63,2.23c3.23,-1.26 5.24,-2.86 7.66,1.3c1.9,-0.63 5.73,0.93 6.02,-0.07c-1.49,-0.82 -3.05,-1.49 -5.35,-1.49c-0.74,-0.71 -1.52,-1.38 -2.31,-2.08c-1.19,-0.37 -2.42,-0.34 -3.64,0.11c-1.27,-0.82 -1.94,-1.75 -4.09,-1.75c-2.12,0 -2.79,0.93 -4.02,1.75c-3.27,0 -3.57,0.04 -5.99,2.23c-1.56,0.45 -3.16,0.86 -4.72,1.3c0.07,0.22 0.11,0.45 0.19,0.63c1.75,-0.26 3.49,-0.52 5.24,-0.78C15.21,25 20.05,23.58 18.67,26.93z"/>
